Client update and create
